Fix a few layout bugs.

--- a/app/assets/cards.less
+++ b/app/assets/cards.less
@@ -6,8 +6,6 @@
 
 .card {
 
-  position: relative;
-
   > header {
     background: @radiantOrchid;
     margin-bottom: @grid-gutter-width;
