--- a/app/assets/index.less
+++ b/app/assets/index.less
@@ -32,13 +32,41 @@ html {
     > article {
       position: relative;
       height: 100%;
-      white-space: nowrap;
+
+      //      .transition-transform(500ms ease-in);
+
+      &.foo0 {
+        //        .transition-transform(500ms ease-in);
+        .translate(0, 0);
+      }
+
+      &.foo1 {
+        //        .transition-transform(500ms ease-in);
+        .translate(-100%, 0);
+      }
+
+      &.foo2 {
+        //        .transition-transform(500ms ease-in);
+        .translate(-200%, 0);
+      }
 
       > section {
         overflow-y: auto;
-        display: inline-block;
+        position: absolute;
         width: 100%;
         height: 100%;
+
+        &.taw-code {
+          left: 0;
+        }
+
+        &.taw-invitation {
+          left: 100%;
+        }
+
+        &.taw-response {
+          left: 200%;
+        }
 
         /*.transition-transform(500ms);
 
